--- a/trainer/config.yml
+++ b/trainer/config.yml
@@ -22,6 +22,7 @@ labels:
 # Export
 export:
   out_path: "docs/models/model.json"
+  version: "sam-0.0.0"
 
 # Preprocess (mirrors browser inference)
 preprocess:
